# school-text-translation

./: .gitignore  BDM.pro  BingTranslator.cpp  BingTranslator.h  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readtranslateandwrite.h
interface/: interface.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
